# tts-kokoro-app

./: .gitignore  README.md  pyproject.toml
app/: convert2txt.py  pdf2txt.py  run.py
data/: LLM_engineer.txt  welcome.txt
notebook/: docling_example.ipynb
