[project]
name = "tts-kokoro-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.20.0",
    "kokoro>=0.7.9",
    "pip>=25.0",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
